--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       # BACKEND SETUP
       # ------------------------------
       - name: Install backend dependencies
-        working-directory: ./server
+        working-directory: ./backend
         run: npm install
 
       - name: Create backend .env file
@@ -48,23 +48,23 @@ jobs:
       # FRONTEND SETUP
       # ------------------------------
       - name: Clean npm cache & remove existing dependencies
-        working-directory: ./client
+        working-directory: ./frontend
         run: |
           rm -rf node_modules package-lock.json
           npm cache clean --force
 
       - name: Install frontend dependencies
-        working-directory: ./client
+        working-directory: ./frontend
         run: npm install
 
       - name: Create frontend .env file
-        working-directory: ./client
+        working-directory: ./frontend
         run: |
           touch .env
           echo "${{ secrets.PROD_FRONTEND_ENV }}" > .env
 
       - name: Build frontend
-        working-directory: ./client
+        working-directory: ./frontend
         run: npm run build
 
       - name: Deploy frontend to Nginx
