--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Start backend with PM2
         working-directory: ./backend
         run: |
-          pm2 restart backend || pm2 start index.js --name backend
+          pm2 restart backend || pm2 start src/index.js --name backend
 
       # ------------------------------
       # FRONTEND SETUP
